apps/infrastructure/netbootxyz/templates/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netboot-auth
  namespace: authentik
spec:
  rules:
  - host: netboot.mobrockers.com
    http:
      paths: 
        - path: /outpost.goauthentik.io
          pathType: Prefix
          backend:
            service:
              name: ak-outpost-authentik-embedded-outpost
              port:
                number: 9000
  tls:
  - hosts:
    - netboot.mobrockers.com
